# light_profile_study

./: README.md
405nm_65mm_from_back(third)/: image_names_and_distances.txt  notes.txt
405nm_65mm_from_back(third)/outputs/: G0400387_dis_2.5_cos(theta)_and_weights.txt  G0400387_dis_2.5_phi_and_weights.txt  G0400388_dis_7.5_cos(theta)_and_weights.txt  G0400388_dis_7.5_phi_and_weights.txt  G0400389_dis_12.5_cos(theta)_and_weights.txt  G0400389_dis_12.5_phi_and_weights.txt  G0400390_dis_17.5_cos(theta)_and_weights.txt  G0400390_dis_17.5_phi_and_weights.txt  (+22 more)
405nm_68mm_from_back(second)/: image_names_and_distances.txt  image_names_and_distances.txt~  notes.txt
470nm_65mm_from_back(fourth)/: image_names_and_distances.txt  notes.txt
470nm_65mm_from_back(last_underwater)/: all_cos_theta_weights.txt  all_cos_theta_weights.txt~  image_names_and_distances.txt  notes.txt
470nm_68mm_from_back(first)/: all_cos_theta_weights.txt~  all_cos_theta_weights1.txt  all_cos_theta_weights1.txt~  image_names_and_distances.txt
Code/: CMakeCache.txt  Makefile  analyze.py  analyze.py~  analyze_all_images.sh  analyze_all_images.sh~  augment_data  cmake_install.cmake  convert_GPR_to_tiff.sh  convert_GPR_to_tiff.sh~  convert_all.sh  convert_target_to_png.py  image_load_lib.py  label_interpolation_data  overlay_histogram.py  overlay_histogram.py~  verify_interpolation.py  verify_interpolation.py~
Code/src/: CMakeLists.txt  CMakeLists.txt~  annotate.cpp  annotate.hpp  augment.cpp  augment.cpp~  label_interpolation_data.cpp  label_interpolation_data.cpp~
(+115 files in other folders)
